test-cases/negative/test_046_unreachable_code.lay
# negative test: unreachable code after return
# expected: warning or should work

define function test that returns Number
  return 5
  print 'unreachable'


